--- a/estilo3.css
+++ b/estilo3.css
@@ -6,3 +6,111 @@ body {
   margin: 50px;
   font-size: 18px;
 }
+
+p {
+  color: #00f;
+  font-size: 50px;
+  font-weight: normal;
+  font-family: "Square Peg", "cursive";
+  text-align: justify;
+  text-transform: lowercase;
+  letter-spacing: 2px;
+  word-spacing: 5px;
+}
+.texto {
+  line-height: 50px;
+  text-shadow: 2px 2px 0px #0ff; /*tem que colocar os 4 componentente nesse caso*/
+  /*direita, para baixo, esfumaçado, cor*/
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+
+table {
+  width: 600px;
+  border: 0;
+  box-shadow: none;
+}
+
+table thead {
+  background-color: #ccc;
+}
+
+th {
+  font-weight: normal;
+}
+
+table tbody {
+  background-color: #fff;
+  text-align: right;
+}
+
+tr td {
+  padding: 50px;
+  border-bottom: 2px #000;
+}
+
+tr:hover {
+  background-color: #ccb;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #eee;
+}
+
+label {
+  display: block;
+  margin-top: 20px;
+}
+
+input [type="text"],
+select {
+  padding: 10px;
+  width: 500px;
+  margin-top: 10pxz;
+}
+
+textarea {
+  height: 200px;
+  resize: none;
+}
+
+fieldset {
+  background-color: #eee;
+  margin-bottom: 20px;
+  border: 2px solid salmon;
+}
+
+legend {
+  background-color: salmon;
+  color: #fff;
+  padding: 5px;
+}
+
+.auladecss {
+  display: block;
+  background-color: #000;
+  color: #fff;
+  font-size: 15px;
+  border: 1px #ccc;
+  outline: 0;
+}
+
+.termoslink {
+  color: #fff;
+  text-decoration: none;
+}
+
+.termoslink:hover {
+  text-decoration: none;
+}
+
+button {
+  padding: 10px;
+  font-size: 15px;
+  border: 1px solid #ccc;
+  background-color: #eee;
+}
