--- a/style.css
+++ b/style.css
@@ -1,13 +1,4 @@
 body {
   margin: 0;
-}
-
-nav {
-  background-color: yellow;
-}
-
-mariakrishna {
-  background-color: black;
-  font-size: 30px;
-  color: white;
+  display: grid;
 }
