--- a/style.css
+++ b/style.css
@@ -26,19 +26,43 @@ form {
 input {
   border-radius: 10px;
 }
+@keyframes umexemplo {
+  /*porcentagens representam a proporção das propriedades renderizadas de acordo com o tempo*/
+  0% {
+    background-color: red;
+    top: 0;
+    left: 0;
+  }
+  25% {
+    background-color: yellow;
+    top: 0px;
+    left: 200px;
+  }
+  50% {
+    background-color: green;
+    top: 200px;
+    left: 200px;
+  }
+  75% {
+    background-color: blue;
+    top: 200px;
+    left: 0px;
+  }
+  100% {
+    background-color: purple;
+    top: 0;
+    left: 0;
+  }
+}
 
+/*para animações, primeiro se criam os frames, os quadros da animação e aplica à um elemento*/
 .exemplo {
-  width: 500px;
+  width: 150px;
   height: 200px;
-  background-color: blue; /*alguns navegadores podem não suportar o linear gradient, enão é necessário colocar uma sintaxe padrão ou proteções para cada navegador*/
-  background: linear-gradient(
-    45deg,
-    red,
-    orange,
-    yellow,
-    green,
-    blue,
-    purple,
-    pink
-  ); /*as medidas podem ser em graus*/
+  animation-name: umexemplo;
+  background-color: red;
+  position: absolute;
+  animation-duration: 4s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
 }
