--- a/medicenter/assets/css/style.css
+++ b/medicenter/assets/css/style.css
@@ -12,6 +12,7 @@ header {
 .container {
   /*parte do conteúdo do site*/
   width: 990px;
+  justify-content: space-between;
   display: flex;
 }
 
@@ -21,4 +22,38 @@ header {
 }
 
 .menu {
+  display: flex;
+  align-items: center;
+}
+
+nav ul,
+nav li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+nav ul {
+  display: flex;
+}
+
+nav a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #727272;
+}
+
+nav .active,
+nav a:hover {
+  background-color: #39aae1;
+  color: #fff;
+}
+
+#banner {
+  background-image: url("../images/img1.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 800px;
 }
