--- a/medicenter/assets/css/style.css
+++ b/medicenter/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
+
 body {
   margin: 0;
   padding: 0;
@@ -25,6 +27,10 @@ header {
 .menu {
   display: flex;
   align-items: center;
+}
+
+.menuMobile {
+  display: none;
 }
 
 nav ul,
@@ -131,7 +137,7 @@ nav a:hover {
 
 .banner_weekdays {
   display: flex;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #e9e9e9;
   padding-bottom: 10px;
   margin-top: 15px;
   justify-content: space-between;
@@ -139,4 +145,311 @@ nav a:hover {
 
 .banner_hours {
   display: flex;
+}
+
+#geral {
+  display: flex;
+  justify-content: center;
+}
+
+#geral section {
+  flex: 2;
+}
+
+#geral aside {
+  flex: 1;
+}
+
+.widget_title {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.widget_title_text {
+  color: #000;
+  font-size: 21px;
+  font-weight: bold;
+}
+
+.widget_title_bar {
+  width: 50px;
+  height: 3px;
+  background-color: #39aae1;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+article {
+  flex: 1;
+  min-width: 300px;
+  margin-right: 20px;
+}
+
+article .news_data {
+  display: flex;
+}
+article .news_posted_at {
+  background-color: #2b4c99;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
+  margin-right: 2px;
+}
+
+article .news_comments {
+  background-color: #39aae1;
+  color: #fff;
+  font-size: 12px;
+  padding: 10px;
+}
+
+article .news_tumb {
+  margin-top: 30px;
+}
+
+article .news_tumb img {
+  width: 100%;
+  height: auto;
+}
+
+article .news_title {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  font-size: 19px;
+}
+
+article .news_resume {
+  color: #5c5c5c;
+  font-size: 12px;
+  line-height: 15px;
+  margin-bottom: 30px;
+}
+
+article a {
+  text-decoration: none;
+  color: #000;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #1e1e1e;
+}
+
+.flex_column {
+  flex-direction: column;
+}
+
+.footer_menu {
+  display: flex;
+  flex: 1;
+  color: #fff;
+}
+
+.footer_menu a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+.fm1,
+.fm2,
+.fm3 {
+  flex: 1;
+  color: #fff;
+  padding: 20px;
+}
+
+.fm1 h2,
+.fm2 h2,
+.fm3 h2 {
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.fm1 p,
+.fm2 p,
+.fm3 p {
+  font-size: 12px;
+}
+
+.fm1 {
+  background-color: #39aae1;
+}
+
+.fm2 {
+  background-color: #0079c7;
+}
+
+.fm3 {
+  background-color: #2b4c99;
+}
+
+.footer_area {
+  display: flex;
+}
+
+.footer_area_item {
+  flex: 1;
+  color: #fff;
+}
+
+footer .widget_title_text {
+  color: #fff;
+}
+
+.footer_copy {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  height: 40px;
+  line-height: 40px;
+  font-size: 10px;
+  color: #5c5c5c;
+  border-top: 1x solid #2c2c2c;
+}
+
+.footer_copy span {
+  color: #fff;
+}
+
+.footer_text {
+  display: flex;
+  font-size: 12px;
+  color: #8c8c8c;
+  padding-right: 10px;
+}
+
+.footer_info {
+  padding-top: 20px;
+  display: flex;
+}
+
+.footer_area_item {
+  font-size: 12px;
+  line-height: 15px;
+  padding-right: 10px;
+}
+.address {
+  flex: 1;
+  color: #8c8c8c;
+}
+.contact {
+  flex: 1;
+  color: #8c8c8c;
+}
+
+.footer_area_item a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.post1 {
+  display: flex;
+  padding-bottom: 15px;
+}
+
+.post_link,
+.post_twitter {
+  padding-left: 25px;
+  color: #8c8c8c;
+}
+
+.posted_when {
+  color: #39aae1;
+}
+
+.social_media {
+  display: flex;
+  font-size: 18px;
+  margin-right: 20px;
+  padding-top: 20px;
+  align-items: left;
+  justify-content: space-between;
+}
+.social_media a {
+  color: #8c8c8c;
+}
+
+@media (max-width: 600px) {
+  .banner_headline {
+    padding: 20px;
+  }
+  .banner_headline h1 {
+    font-size: 55px;
+  }
+
+  .banner_headline h2 {
+    font-size: 17px;
+  }
+
+  .banner_options {
+    height: auto;
+    flex-direction: column;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  #geral section,
+  #geral aside {
+    margin: 20px;
+  }
+
+  .footer_menu {
+    flex-direction: column;
+  }
+  .footer_area {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .footer_copy {
+    padding-left: 20px;
+  }
+
+  header .container {
+    flex-direction: row;
+  }
+
+  nav ul {
+    flex-direction: column;
+    display: none;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+  }
+
+  header {
+    height: auto;
+  }
+
+  .logo {
+    padding-left: 20px;
+  }
+
+  .menuMobile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 40px;
+    height: 40px;
+    margin-right: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .mm_line {
+    height: 3px;
+    background-color: #39aae1;
+  }
+
+  #geral section {
+    margin-top: 170px;
+  }
 }
